# olist-db

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: data_dictionary.yml
docs/: deploy-ec2.md
notebooks/: eda.ipynb
olist_db/: __init__.py  cli.py  config.py  load_data.py
olist_db/schemas/: ecommerce.sql  marketing.sql
scripts/: deploy.sh  setup_db.sh  test_pgvector.sh
