[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olist_db"
version = "0.1.0"
description = "ETL pipeline for Olist ecommerce database"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Cainã Silva", email = "cmcouto.silva@gmail.com"},
]
readme = "README.md"
keywords = []
dependencies = [
    "click>=8.2.1",
    "psycopg>=3.2.9",
]

[project.scripts]
load-olist-ecommerce-data = "olist_db.cli:load_data_cli"

[project.optional-dependencies]
eda = [
    "pandas>=2.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["olist_db"]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = false

[tool.hatch.build]
packages = ["olist_db"]
include = [
  "olist_db/schemas/*.sql",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
notebook = [
    "ipykernel>=6.29.5",
]

[tool.uv]
default-groups = ["dev", "notebook"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
exclude = []

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "UP", # pyupgrade
    # "D",  # pydocstyle
    "RUF",  # Ruff-specific rules
    "B",    # flake8-bugbear
    # "T20",  # print found
    "C90",  # mccabe (complex structures)
    "SIM",  # flake8-simplify
    # "ANN",  # flake8-annotations
    "TID",  # flake8-tidy-imports
]
ignore = [

]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
